compiler/testData/diagnostics/tests/incompleteCode/pseudocodeTraverseNextInstructions.fir.kt
package b

fun foo() {
    for (i in <!ITERATOR_MISSING, UNRESOLVED_REFERENCE!>collection<!>) {
        {
         break
    }
}<!SYNTAX!><!>
